# sherpa

./: .env.local  Dockerfile  Makefile  README.md  docker-compose.yml
src/: README.md  manage.py  pyproject.toml  setup.cfg
src/apps/common/: urls.py  views.py
src/apps/common/tests/: test_view.py
src/apps/users/: factories.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/tests/: fixture.py  test_serializers.py  test_utils.py  test_view.py
src/sherpa/: asgi.py  urls.py  wsgi.py
src/sherpa/settings/: base.py  local.py  test.py
